--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -2191,37 +2191,42 @@ body.profile .topic.flex h2, body.map .topic.flex h2, body.story .topic.flex h2 
   body.profile .topic.flex .data-btn, body.map .topic.flex .data-btn,
   body.story .topic.flex .data-btn {
     top: 13px; }
-body.profile .topic sub, body.map .topic sub, body.story .topic sub {
+body.profile .topic .sub, body.map .topic .sub, body.story .topic .sub {
   font-family: "Palanquin", sans-serif;
   font-size: 13px;
   line-height: 1.35;
   font-weight: 400;
   text-transform: initial;
   letter-spacing: 0.05em;
-  color: #666; }
-  body.profile .topic sub a, body.map .topic sub a, body.story .topic sub a {
+  color: #666;
+  vertical-align: baseline;
+  position: relative; }
+  body.profile .topic .sub a, body.map .topic .sub a, body.story .topic .sub a {
     color: #666; }
-    body.profile .topic sub a:hover, body.map .topic sub a:hover,
-    body.story .topic sub a:hover {
+    body.profile .topic .sub a:hover, body.map .topic .sub a:hover,
+    body.story .topic .sub a:hover {
       text-decoration: none;
       border-bottom: 1px solid #666; }
-body.profile .topic .sub-source, body.map .topic .sub-source,
-body.story .topic .sub-source {
-  display: block;
-  color: #a8a8a8;
-  font-family: "Palanquin", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.5; }
-  body.profile .topic .sub-source a, body.map .topic .sub-source a,
-  body.story .topic .sub-source a {
-    color: #888; }
-    body.profile .topic .sub-source a:hover, body.map .topic .sub-source a:hover,
-    body.story .topic .sub-source a:hover {
-      border-bottom: 1px solid #888; }
-  body.profile .topic .sub-source span, body.map .topic .sub-source span,
-  body.story .topic .sub-source span {
-    vertical-align: baseline; }
+body.profile .topic .sub-title, body.map .topic .sub-title,
+body.story .topic .sub-title {
+  color: #ef6145; }
+  body.profile .topic .sub-source, body.map .topic .sub-source,
+  body.story .topic .sub-source {
+    display: block;
+    color: #a8a8a8;
+    font-family: "Palanquin", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5; }
+    body.profile .topic .sub-source a, body.map .topic .sub-source a,
+    body.story .topic .sub-source a {
+      color: #888; }
+      body.profile .topic .sub-source a:hover, body.map .topic .sub-source a:hover,
+      body.story .topic .sub-source a:hover {
+        border-bottom: 1px solid #888; }
+    body.profile .topic .sub-source span, body.map .topic .sub-source span,
+    body.story .topic .sub-source span {
+      vertical-align: baseline; }
 body.profile .stat-text, body.profile .stat-rank, body.map .stat-text,
 body.map .stat-rank, body.story .stat-text, body.story .stat-rank {
   font-family: "Palanquin", sans-serif; }
@@ -2252,17 +2257,22 @@ body.profile .stat-group, body.map .stat-group, body.story .stat-group {
       margin-bottom: 8px; }
       body.profile .stat-value.stat-small, body.map .stat-value.stat-small,
       body.story .stat-value.stat-small {
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 400;
-        margin-left: 2px;
         margin-top: 2px; }
-        body.profile .stat-value a, body.map .stat-value a, body.story .stat-value a {
-          padding-bottom: 1px;
-          text-decoration: none;
-          text-transform: capitalize; }
-          body.profile .stat-value a:hover, body.map .stat-value a:hover,
-          body.story .stat-value a:hover {
-            text-decoration: none; }
+        body.profile .stat-value .stat-span, body.profile .stat-value .stat-text,
+        body.profile .stat-value a, body.map .stat-value .stat-span,
+        body.map .stat-value .stat-text, body.map .stat-value a,
+        body.story .stat-value .stat-span, body.story .stat-value .stat-text,
+        body.story .stat-value a {
+          vertical-align: baseline; }
+          body.profile .stat-value a, body.map .stat-value a, body.story .stat-value a {
+            padding-bottom: 1px;
+            text-decoration: none;
+            text-transform: capitalize; }
+            body.profile .stat-value a:hover, body.map .stat-value a:hover,
+            body.story .stat-value a:hover {
+              text-decoration: none; }
 body.profile nav, body.map nav, body.story nav {
   position: fixed;
   top: 0;
